# ClipFInder3

./: .gitignore  .gitmodules  app.py  hacky_weaviate_backend.py  package.json  pyproject.toml  requirements.txt  tags_wrangler.py
backend/: clip_embedding_provider.py  clip_embedding_store.py  clip_model.py  embedding_store.py  filtering.py  mobile_clip_model.py  mock_clip_model.py  simple_clip_embedding_store.py  thumbnail_provider.py  types.py  util.py  weaviate_client.py  zero_shot.py
backend/progress_websocket/: progress_broadcaster.py
clip_finder_backend/: clip_modelling.py  embedding_store.py  filtering.py  loaders.py  mock_clip_model.py  progress_manager.py  tags_wrangler.py  tasks.py  types.py  util.py  zero_shot.py
frontend/: app.js  index.html  package.json  tailwind.config.ts  vite.config.js
frontend/src/: App.css  App.tsx  Utils.tsx  app.css  main.jsx  main.tsx
frontend/src/Components/: CLIPEmbeddingInput.tsx  ContextMenu.module.css  ContextMenu.tsx  DebouncedTextField.tsx  DistanceQuery.tsx  EmbeddingInput.tsx  EmbeddingInputs.tsx  FilterInput.tsx  Image.tsx  ImageResults2D.tsx  ImageResultsGrid.tsx  MacOSQuickLook.tsx  MainStatusBar.tsx  MultiColumn.tsx  PopulateDatabase.tsx  ProgressStatusBar.css  ProgressStatusBar.tsx  QuickLookOverlay.tsx  ResultImage.tsx  SearchHistoryDropdown.tsx  TagEditorSidebar.tsx  TagShortcutConfigDialog.tsx  TagTextInput.tsx  TestProgress.tsx  TraceUpdate.tsx  WebSocketProgressBar.tsx  ZeroShotClassificationInput.tsx  ZeroShotClassificationQuery.tsx  ZoomableContainer.tsx
notebooks/: tsp.ipynb
(+25 files in other folders)
