[project]
name = "clip-finder-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    'requests',
    'Pillow',
    'transformers',
    'numpy<2',
    'load-dotenv',
    'mobileclip@git+https://github.com/ialhashim/ml-mobileclip.git',
    'Pillow>=10.0.0',
    'platformdirs>=3.0.0',
    'osxmetadata',
    'fastapi',
    'uvicorn[standard]',
    'pydantic',
    'tsp-solver2',
    #'MulticoreTSNE'
    "notebook>=7.4.5",
]

[tool.setuptools]
py-modules = ['clip_finder_backend']
